# moalmanac

./: Dockerfile  LICENSE  LICENSE_snfpy  NOTICE  README.md  build_docker.sh  pyproject.toml  requirements.txt
base-image/: Dockerfile  README.md
datasources/: README.md
docs/: README.md  description-of-inputs.md  description-of-outputs.md  how-to-contribute.md  pull_request_template.md  template-release.md
example_data/: README.md  example_patient.capture.germline.maf  example_patient.capture.sbs_contributions.txt  example_patient.capture.somatic.called.cna.txt  example_patient.capture.somatic.coverage.txt  example_patient.capture.somatic.indels.maf  example_patient.capture.somatic.snvs.maf  example_patient.rna.somatic.snvs.maf  example_patient.rna.star.fusions.txt  example_patient.simplified_input.txt  manufacture-germline-input.ipynb
example_output/: README.md  example.actionable.txt  example.germline.acmg.txt  example.germline.cancer_related.txt  example.germline.hereditary_cancers.txt  example.input-metadata.txt  example.moalmanac-execution.json  example.msi_variants.txt  example.preclinical.efficacy.txt  example.report.html  example.sigs.context.txt  example.sigs.cosmic.txt  example.somatic.filtered.txt  example.somatic.scored.txt  example.therapeutic_strategies.txt  example_output.BRAF p.V600E (Missense).Trametinib  example_output.actionable.txt  example_output.germline.cancer_related.txt  example_output.germline.hereditary_cancers.txt  example_output.integrated.summary.txt  example_output.matchmaker.txt  example_output.msi_variants.txt  (+3 more)
moalmanac/: snf.py  (+28 more)
(+130 files in other folders)
